# options-explorer

./: .gitignore  README.md  create_issues.sh
backend/: check_walls.py  main.py  pyproject.toml  test_utils.py  utils.py
frontend/: package-lock.json  package.json
frontend/app/: page.tsx
frontend/components/: ChatWidget.tsx  ExposureChart.tsx  GammaProfileChart.tsx  GexHeatmap.tsx  InfoTooltip.tsx  OptionChain.tsx  PriceChart.tsx  ScenarioSimulator.tsx  TermStructureChart.tsx  VolSmileChart.tsx
frontend/services/: api.ts
