[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alpaca-py>=0.43.4",
    "fastapi>=0.136.1",
    "google-genai>=2.2.0",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "scipy>=1.17.1",
    "uvicorn>=0.46.0",
]
